data/derived/comb/progs/unify/prog4933.ml.out
Characters 25-37:
  let rec mulByDigit i l = mulByDigit i-1 (bigAdd l l);;
                           ^^^^^^^^^^^^
Error: This expression has type 'a -> 'b
       but an expression was expected of type int
